--- a/CSS/style.css
+++ b/CSS/style.css
@@ -107,6 +107,8 @@ img {
 }
 
 .header-img {
+  width: 200px;
+  height: 200px;
   border-radius: 50px;
 }
 
@@ -130,4 +132,9 @@ img {
   background-color: #a8b2b6;
   box-shadow: 0 5px 40px 0 rgba(168, 159, 159, 0.1);
   border-radius: 20px 20px 0 0;
+}
+
+.footer-img {
+  width: 85px;
+  height: 32px; 
 }
